--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "webpack": "^5.74.0",
-    "scripts": {
-      "start": "webpack-dev-server --progress --colors --inline --env.dev",
-      "build": "webpack -p --progress --env.prod"
-    }
+    "webpack": "^5.74.0"
+  },
+  "scripts": {
+    "start": "webpack-dev-server --progress --colors --inline --env.dev",
+    "build": "webpack -p --progress --env.prod"
   }
 }
