--- a/package.json
+++ b/package.json
@@ -10,10 +10,26 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "webpack": "^5.74.0"
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^3.11.3"
   },
   "scripts": {
     "start": "webpack-dev-server --progress --colors --inline --env.dev",
     "build": "webpack -p --progress --env.prod"
-  }
+  },
+  "name": "webpack-cli",
+  "description": "",
+  "version": "1.0.0",
+  "main": "webpack.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sharinogan/starter-cicd.git"
+  },
+  "author": "Voragun Supawong",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/sharinogan/starter-cicd/issues"
+  },
+  "homepage": "https://github.com/sharinogan/starter-cicd#readme"
 }
